Fix spacing issue of overall section

--- a/style.css
+++ b/style.css
@@ -130,31 +130,21 @@ select {
     }
 }
 
-.container {
-    --max-width: 1110px;
-    --padding: 1rem;
-    width: min(var(--max-width), 100% - (var(--padding) * 2));
-    margin-inline: auto;
-}
-
-.even-columns {
-    display: grid;
-    gap: 1rem;
-}
-
-@media (min-width: 50em) {
-    .even-columns {
-        grid-auto-flow: column;
-        grid-auto-columns: 1fr;
-    }
-}
-
 /* General styling */
 
 body {
     font-size: var(--fs-body);
     font-family: var(--ff-body);
     color: var(--clr-primary-400);
+}
+
+p:not([class]) {
+    opacity: 0.7;
+    max-width: 32ch;
+}
+
+p[data-width="wide"] {
+    max-width: 42ch;
 }
 
 /* button */
@@ -169,14 +159,14 @@ body {
     font-weight: var(--fw-bold);
     font-size: var(--fs-button);
     line-height: 1;
-    color: var(--clr-neutral-100);
+    color: var(--clr-neutral-900);
     background-color: var(--clr-accent-400);
     box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
 }
 
 .button[data-type="inverted"] {
     color: var(--clr-accent-400);
-    background-color: var(--clr-neutral-100);
+    background-color: var(--clr-neutral-900);
 }
 
 .button:hover,
@@ -275,6 +265,29 @@ body {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+
+.container {
+    --max-width: 1110px;
+    --padding: 1rem;
+    width: min(var(--max-width), 100% - (var(--padding) * 2));
+    margin-inline: auto;
+}
+
+:where(.flow :not(:first-child)) {
+    margin-top: var(--flow-spacer, 3em);
+}
+
+.even-columns {
+    display: grid;
+    gap: 1rem;
+}
+
+@media (min-width: 50em) {
+    .even-columns {
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+    }
 }
 
 .text-primary-400 {
